@@ -1,6 +1,8 @@
 Revision history for Plack-App-BeanstalkConsole
 
 {{$NEXT}}
+          - prevent install issues on some OSes by ensuring that storage.json
+            in the installed PHP application is writable.
 
 0.009     2016-09-17 04:21:38Z
           - update the download URL for the PHP application (thanks, Thomas
